--- a/tasking/templates/usermanage/login.html
+++ b/tasking/templates/usermanage/login.html
@@ -7,12 +7,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 
 <head>
-	<title>Shine Login Form Responsive Widget Template :: w3layouts</title>
+    <meta charset="UTF-8">
+	<title>python1905</title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<meta name="keywords" content="Shine Login Form Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements"
-	/>
+{#	<meta name="keywords" content="Shine Login Form Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements"/>#}
 	<script type="application/x-javascript">
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
@@ -37,12 +37,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <body>
 	<!--header-->
 	<div class="header-w3l">
-		<h1>Shine Login Form</h1>
+		<h1>登录</h1>
 	</div>
 	<!--//header-->
 	<div class="main-content-agile">
 		<div class="sub-main-w3">
-			<h2>Login Here</h2>
+{#			<h2>Login Here</h2>#}
 			<form action="#" method="post">
 				<div class="pom-agile">
 					<span class="fa fa-user" aria-hidden="true"></span>
