--- a/tasking/templates/base.html
+++ b/tasking/templates/base.html
@@ -1083,6 +1083,10 @@
 {% endblock navbar %}
 
 
+
+<div data-v-ae77b1e8="" class="box-right-content"><h3 data-v-ae77b1e8="">登 录</h3> <div data-v-ae77b1e8="" class="inp-box"><div data-v-ae77b1e8="" class="ivu-input-wrapper ivu-input-wrapper-large ivu-input-type"><!----> <!----> <i class="ivu-icon ivu-icon-ios-loading ivu-load-loop ivu-input-icon ivu-input-icon-validate"></i> <input autocomplete="off" spellcheck="false" type="text" placeholder="Email/手机/External ID" maxlength="255" class="ivu-input ivu-input-large"> <!----></div></div> <div data-v-ae77b1e8="" class="inp-box"><div data-v-ae77b1e8="" class="ivu-input-wrapper ivu-input-wrapper-large ivu-input-type"><!----> <!----> <i class="ivu-icon ivu-icon-ios-loading ivu-load-loop ivu-input-icon ivu-input-icon-validate"></i> <input autocomplete="off" spellcheck="false" type="password" placeholder="密码" maxlength="255" class="ivu-input ivu-input-large"> <!----></div></div> <!----> <div data-v-ae77b1e8="" class="ivu-row"><div data-v-ae77b1e8="" class="ivu-col ivu-col-span-8"><label data-v-ae77b1e8="" class="ivu-checkbox-wrapper ivu-checkbox-wrapper-checked ivu-checkbox-default"><span class="ivu-checkbox ivu-checkbox-checked"><span class="ivu-checkbox-inner"></span> <input type="checkbox" class="ivu-checkbox-input"></span> 保持登录</label></div> <div data-v-ae77b1e8="" class="forget ivu-col ivu-col-span-8 ivu-col-offset-8"><a data-v-ae77b1e8="" href="#/findPasstwo" class="color-customer">忘记密码</a></div></div> <button data-v-ae77b1e8="" type="button" class="btn-login ivu-btn ivu-btn-primary ivu-btn-long ivu-btn-large"><!----> <!----> <span>登录</span></button> <div data-v-ae77b1e8="" class="errors" style="display: none;"></div> <!----> <!----></div>
+
+
 {% block content %}
 {% endblock content %}
 
