第二次提交，new_ticket

--- a/tasking/templates/base.html
+++ b/tasking/templates/base.html
@@ -85,7 +85,7 @@
     <meta http-equiv="expires" content="0">
     <meta http-equiv="pragma" content="no-cache">
     <meta name="renderer" content="webkit">
-    <title>客服-北京亚客科技有限公司</title>
+    <title>Tasking System</title>
     <link rel="shortcut icon" ng-href="">
     <link rel="stylesheet" href="//cdn.ewei.com/7.3.0/console/css/vendor-572e5acf76.css">
     <link rel="stylesheet" href="//cdn.ewei.com/7.3.0/console/css/layout-809af0fe81.css">
